视点结构树操作初步完成

--- a/index.html
+++ b/index.html
@@ -248,11 +248,11 @@
   <div id="rMenuEye">
     <ul>
         <li id="Vm_add">添加视点</li>
-        <li id="Vm_addP">添加同级视点</li>
+        <!-- <li id="Vm_addP">添加同级视点</li> -->
         <li id="Vm_del">删除节点</li>
         <!-- <li id="Vm_delP" onclick="removeNode();">删除父节点</li> -->
-        <li id="Vm_addCon" >添加目录</li>
-        <li id="Vm_addRootCon" >添加根目录</li>
+        <li id="Vm_addCon" >添加文件夹</li>
+        <!-- <li id="Vm_addLevCon" >添加同级文件夹</li> -->
         <!-- <li id="Vm_delP" onclick="removeNode();">添加根目录</li> -->
 
         <li id="Vm_reset">恢复zTree</li>
