--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
     <div class="container-fluid">
       <div class="row">
         <a href="" class="logo navbar-text">
-          <img src="images/logo01.png" alt="BPROBIM" title="BPROBIM" />
+          <img src="images/logo02.png" alt="BPROBIM" title="BPROBIM" />
         </a>
 
         <div class="pull-right">
-          <a href="" class="help btn btn-link">Help</a>
-          <a class="btn btn-default">用户登陆</a>
+          <!-- <a href="" class="help btn btn-link">Help</a>
+          <a class="btn btn-default">用户登陆</a> -->
 
         </div>
       </div>
@@ -70,27 +70,27 @@
           <ul class="nav nav-tabs" role="tablist">
             <li role="presentation" class="active" data-toggle="tooltip" data-placement="bottom" title="树结构/属性">
               <a href="#set" aria-controls="set" role="tab" data-toggle="tab">
-                <span class="glyphicon glyphicon-tree-conifer" aria-hidden="true"></span>
+                <span class="tabIconTrees tabIcons" aria-hidden="true"></span>
               </a>
             </li>
             <li role="presentation" data-toggle="tooltip" data-placement="bottom" title="视点/批注">
               <a href="#light" aria-controls="light" role="tab" data-toggle="tab">
-                <span class="glyphicon glyphicon-eye-open" aria-hidden="true"></span>
+                <span class="tabIconView tabIcons" aria-hidden="true"></span>
               </a>
             </li>
             <li role="presentation" data-toggle="tooltip" data-placement="bottom" title="选择集管理">
               <a href="#material" aria-controls="material" role="tab" data-toggle="tab">
-                <span class="glyphicon glyphicon-hand-up" aria-hidden="true"></span>
+                <span class="tabIconSelections tabIcons" aria-hidden="true"></span>
               </a>
             </li>
             <li role="presentation" data-toggle="tooltip" data-placement="bottom" title="任务管理">
               <a href="#annotations" aria-controls="annotations" role="tab" data-toggle="tab">
-                <span class="glyphicon glyphicon-th-list" aria-hidden="true"></span>
+                <span class="tabIconMission tabIcons" aria-hidden="true"></span>
               </a>
             </li>
-            <li role="presentation" data-toggle="tooltip" data-placement="bottom" title="工程管理">
+            <li role="presentation" data-toggle="tooltip" data-placement="bottom" title="工程配置">
               <a href="#animation" aria-controls="animation" role="tab" data-toggle="tab">
-                <span class="glyphicon glyphicon-tower" aria-hidden="true"></span>
+                <span class="tabIconSchedule tabIcons" aria-hidden="true"></span>
               </a>
             </li>
           </ul>
